[gd_scene load_steps=2 format=3 uid="uid://cuhx65j4e8pjx"]

[ext_resource type="Script" path="res://scenes/start_screen/start_screen.gd" id="1_ook5o"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ook5o")

[node name="Background" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "BREAKOUT"
horizontal_alignment = 1

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start New Game"

[node name="LeaderboardsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Leaderboards"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="button_up" from="CenterContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/LeaderboardsButton" to="." method="_on_leaderboards_button_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_button_up"]
